added registration base

--- a/tutorials/templates/base.html
+++ b/tutorials/templates/base.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% if title %}
-  <title>Tutorial-Webw - {{title}}</title>
+  <title>Tutorial-Web - {{title}}</title>
   {% else %}
     <title> Tutorial-Web </title>
   {% endif %} 
@@ -22,7 +22,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-  <link rel="stylesheet" href="{% static 'css/basereview.css' %}">
+  <link rel="stylesheet" href="{% static 'css/tutorial.css' %}">
   {% endblock %}
 </head>
 
@@ -46,7 +46,7 @@
       <!-- MDB core JavaScript -->
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
-      <script type="text/javascript" src="{% static 'script.js' %}"></script>
+      <script type="text/javascript" src="{% static 'scripts.js' %}"></script>
     {% endblock %}
 
 
