--- a/static/css/tutorial.css
+++ b/static/css/tutorial.css
@@ -25,7 +25,7 @@
   }
 
   /* Carousel*/
-  .carousel,
+  /* .carousel,
   .carousel-item,
   .carousel-item.active {
     height: 100%;
@@ -50,4 +50,4 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-  }
+  } */
