--- a/tutorials/templates/navbar.html
+++ b/tutorials/templates/navbar.html
@@ -2,7 +2,7 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar fixed-top">
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Tutorial-Web</a>
+    <a class="navbar-brand" href="{% url 'index' %}">Tutorial-Web</a>
 
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +15,7 @@
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" href="{% url 'index' %}">Home
               <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Donate</a>
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
@@ -34,18 +34,56 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+        {% if user.is_authenticated %}
+        
+        {% endif %} 
       </ul>
-      <!-- Links -->
+      
+           
+      <!-- Links -->    
+      {% if user.is_authenticated %}
+        <form class="form-inline" role="search" action="{% url 'search_results' %}">
+            <input type="text" class="form-control" placeholder="Search" aria-label="Search" name="keyword">
+            <button type="submit" class="btn btn-outline-white btn-md my-2 btn-sm">Search</button>
+        </form>       
 
-      <form class="form-inline">
-        <div class="md-form my-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        </div>
-      </form>
+      {% endif %}
+      <div class="col-sm-6 col-lg-6 d-flex justify-content-end">
+          {% if user.is_authenticated %}
+          <ul>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-white btn-md my-2 btn-sm text-white success-color-dark" href="{%url 'new-project'%}">SUBMIT YOUR SITE </a>
+            </li>
+          </ul>
+
+          <ul>
+            <li class="dropdown list-unstyled text-white">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user"></i> My Account </a>
+              <ul class="dropdown-menu dropdown-default" role="menu">
+                <li>
+                    <a class="dropdown-item" href="{%url 'profile'%}">Profile</a>
+                  </li>
+                <li>
+                  <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/logout">Logout</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          {% else %}
+          <li class="list-unstyled">
+              <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/login">Login</a>
+              <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/register">Register</a>
+          </li>
+
+          {% endif %}
+      </div>
+
     </div>
     <!-- Collapsible content -->
 </nav>
 <!--/.Navbar-->
-
-
-
