--- a/tutorials/templates/index.html
+++ b/tutorials/templates/index.html
@@ -3,11 +3,11 @@
 
 <div class="landing" id="first"> 
           
-    <div class="rgba-indigo-light full-bg-img flex-center mask white-text" style="height: 90vh;">           
+    <div class="rgba-indigo-light full-bg-img flex-center mask white-text" style="height: 70vh;">           
 
         <ul class="animated fadeInUp col-md-12 list-unstyled list-inline">
             <li>
-            <h1 class="font-weight-bold text-uppercase">one-stope oneline tutorial Website</h1>
+            <h1 class="displat-5 font-weight-bold text-uppercase">one-stope oneline tutorial Website</h1>
             </li>
             <li>
             <p class="font-weight-bold text-uppercase py-4">get all the learning resources with us here</p>
@@ -27,8 +27,12 @@
 <!-- project section -->
 <div class="container-fluid">
     <div class="mb-2 pb-2 pl-4 pr-2 ml-4 mr-1">
-        <h4 class="display-35 font-weight-bold"> view all learning articles</h4>:
+        <h4 class="display-1 font-weight-bold"> view all learning articles</h4>:
+        <h4 class="display-1 font-weight-bold"> view all learning articles</h4>:
+        <h4 class="display-1 font-weight-bold"> view all learning articles</h4>:
     </div>
+
+    {% include "tutorial.html" %}
 
 </div>
 {% endblock %}
