--- a/tutorials/templates/navbar.html
+++ b/tutorials/templates/navbar.html
@@ -1,89 +1,59 @@
-{% load bootstrap4 %}
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar fixed-top">
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="{% url 'index' %}">Tutorial-Web</a>
 
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="{% url 'index' %}">TutorialWeb</a>
+    </div>
 
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="basicExampleNav">
+    <!-- Adding a search form  -->
+    <div class="col-sm-4 col-md-4 navbar-right">
 
-      <!-- Links -->
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'index' %}">Home
-              <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Donate</a>
-        </li>
-        <!-- Dropdown -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Tutotial" name="tutorial">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
-        </li>
-        {% if user.is_authenticated %}
-        
-        {% endif %} 
-      </ul>
-      
-           
-      <!-- Links -->    
+        </div>
+
+      </form>
+    </div>
+    <!-- search form end -->
+
+    <!-- login form here -->
+    <div class="col-sm-6 col-md-6">
       {% if user.is_authenticated %}
-        <form class="form-inline" role="search" action="{% url 'search_results' %}">
-            <input type="text" class="form-control" placeholder="Search" aria-label="Search" name="keyword">
-            <button type="submit" class="btn btn-outline-white btn-md my-2 btn-sm">Search</button>
-        </form>       
+      <ul>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
+                    <span class="caret"></span>
+                </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="{%url 'index'%}">Home</a>
+            </li>
+            <li>
+              <a href="{%url 'new-tutorial'%}">Create Tutorial</a>
+            </li>
+            <li>
+              <a href="/accounts/password/change">Change Password</a>
+            </li>
+            <li>
+              <a href="/logout">Logout</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      {% else %}
+      <li>
+        <a class='btn btn-default' href="/accounts/login">Login</a>
+      </li>
 
       {% endif %}
-      <div class="col-sm-6 col-lg-6 d-flex justify-content-end">
-          {% if user.is_authenticated %}
-          <ul>
-            <li class="nav-item">
-              <a class="nav-link btn btn-outline-white btn-md my-2 btn-sm text-white success-color-dark" href="{%url 'new-project'%}">SUBMIT YOUR SITE </a>
-            </li>
-          </ul>
-
-          <ul>
-            <li class="dropdown list-unstyled text-white">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-user"></i> My Account </a>
-              <ul class="dropdown-menu dropdown-default" role="menu">
-                <li>
-                    <a class="dropdown-item" href="{%url 'profile'%}">Profile</a>
-                  </li>
-                <li>
-                  <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/logout">Logout</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          {% else %}
-          <li class="list-unstyled">
-              <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/login">Login</a>
-              <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/register">Register</a>
-          </li>
-
-          {% endif %}
-      </div>
-
     </div>
-    <!-- Collapsible content -->
+    <!-- end login -->
+
+
+  </div>
 </nav>
-<!--/.Navbar-->
