--- a/tutorials/templates/navbar.html
+++ b/tutorials/templates/navbar.html
@@ -1,59 +1,77 @@
+<nav class="pl-5 pr-5 navbar navbar-expand-lg navbar-dark bg-dark scrolling-navbar fixed-top">
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">TutorialWeb</a>
-    </div>
+  <!-- Navbar brand -->
+  <a class="navbar-brand font-weight-bold" href="{% url 'index' %}">TutorialWeb</a>
 
-    <!-- Adding a search form  -->
-    <div class="col-sm-4 col-md-4 navbar-right">
+  <!-- Collapse button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+    aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+  <!-- Collapsible content -->
+  <div class="collapse navbar-collapse" id="basicExampleNav">
 
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Tutotial" name="tutorial">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-          </div>
-        </div>
-
-      </form>
-    </div>
-    <!-- search form end -->
-
-    <!-- login form here -->
-    <div class="col-sm-6 col-md-6">
-      {% if user.is_authenticated %}
-      <ul>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
-                    <span class="caret"></span>
-                </a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <a href="{%url 'index'%}">Home</a>
-            </li>
-            <li>
-              <a href="{%url 'new-tutorial'%}">Create Tutorial</a>
-            </li>
-            <li>
-              <a href="/accounts/password/change">Change Password</a>
-            </li>
-            <li>
-              <a href="/logout">Logout</a>
-            </li>
-          </ul>
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+        <li class="text-white nav-item">
+          <a class="nav-link" href="{% url 'index' %}">Home</a>
         </li>
-      </ul>
-      {% else %}
-      <li>
-        <a class='btn btn-default' href="/accounts/login">Login</a>
-      </li>
+        <li class="text-white nav-item">
+          <a class="nav-link" href="{% url 'index' %}">Features</a>
+        </li>
+        <li class="text-white nav-item">
+          <a class="nav-link" href="{% url 'index' %}">Donate</a>
+        </li>
+        
+      {% if user.is_authenticated %}
+      
+      {% endif %}        
+    </ul>
+     
+    <!-- Links -->
+    
+    {% if user.is_authenticated %}
+      <form class="form-inline" role="search" action="{% url 'search_results' %}">
+          <input type="text" class="form-control" placeholder="Search" aria-label="Search" name="keyword">
+          <button type="submit" class="btn btn-outline-white btn-md my-2 btn-sm">Search</button>
+      </form>       
 
-      {% endif %}
-    </div>
-    <!-- end login -->
+        {% endif %}
+        <div class="col-sm-6 col-lg-6 d-flex justify-content-end">
+            {% if user.is_authenticated %}
+            
+            <ul>
+              <li class="dropdown list-unstyled text-white">
+                  <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  <i class="fas fa-user"></i> My Account </a>
+                <ul class="dropdown-menu dropdown-default" role="menu">
+                  <li>
+                      <a class="dropdown-item" href="{%url 'profile'%}">Profile</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Submit Your Tutorial</a>
+                  </li>                
+                  <li>
+                    <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            {% else %}
+            <li class="list-unstyled">
+                <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/login">Login</a>
+                <a class='btn btn-sm btn-cyan font-weight-bold' href="/accounts/register">Register</a>
+            </li>
 
+            {% endif %}
+      </div>
 
   </div>
+  <!-- Collapsible content -->
 </nav>
+<!--/Navbar-->
